src/ui/layout/snapshots/kvn_tui__ui__layout__panes__tests__long_subscription_name_stays_on_one_line_snapshot.snap
---
source: src/ui/layout/panes.rs
expression: "snapshot_terminal(&model, TWO_PANE_MIN_WIDTH, 16)"
---
┌ Traffic ───────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                   │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────┐┌ Logs ─────────────────────────────────────┐
│ └ A                    vless  a:1         ││                                           │
│                                           ││                                           │
│ Subscription: A subscription name far ... ││                                           │
│ └ B                    vless  b:2         ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
 DISCONNECTED                                                                  DoH  Global
[90x16]
