src/ui/layout/snapshots/kvn_tui__ui__layout__panes__tests__narrow_layout_hides_logs_and_expands_sources.snap
---
source: src/ui/layout/panes.rs
expression: output
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                  │
└───────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────────────────────────────────────┐
│ └ A                                                                vless  a:1         │
│                                                                                       │
│ Sub  (off)                                                                           │
│ └ B                                                                vless  b:2         │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
│                                                                                       │
└───────────────────────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                                                 DoH  Global
[89x35]
